fixed advantages, resources section spacing styles.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1820 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/product-solutions.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/product-solutions.css
@@ -577,7 +577,7 @@ ul.stickyNav li:hover a{
   min-height: 187px;*/
 }
 
-.mes-section .mes-container .product-box .product-copy-main {
+.mes-section .mes-container .product-box br{display:none;}.mes-section .mes-container .product-box .product-copy-main {
   font-size: 1.125em;
   font-weight: 500;
 }
@@ -929,7 +929,7 @@ h2.section-heading.fb-title{
   letter-spacing: 1px;
 }
 
-.resources-section .resources-container .resources-category .resources-category-box {
+.resources-section .resources-container .resources-category .resources-category-box br{display:none;}.resources-section .resources-container .resources-category .resources-category-box {
   margin-bottom: 20px;
     min-height:192px;
 }
@@ -1051,7 +1051,7 @@ h2.section-heading.fb-title{
     padding: 0;
 }
 
-  .resources-section .resources-container .resources-category .resources-category-heading {
+.resources-section .resources-container .resources-category .resources-category-box br{display:none;}  .resources-section .resources-container .resources-category .resources-category-heading {
     font-size: 1.125rem;
     margin-bottom: 12px;
   }
@@ -1175,7 +1175,7 @@ h2.section-heading.fb-title{
   max-width: 1107px;
   padding-top: 40px;
   margin: 0 auto 25px;
-}
+  padding-bottom:30px;}
 
 .fb-section .fb-container .fb-category-container .fb-category-box .fb-category-heading {
   font-weight: 600;
@@ -1221,7 +1221,7 @@ h2.section-heading.fb-title{
 .fb-section .fb-container .fb-category-container .fb-category-box .fb-category-points-box {
   text-align: left;
 }
-
+.fb-section .fb-container .fb-category-container .fb-category-box .fb-category-points-box br{display:none;}
 .fb-section .fb-container .fb-category-container .fb-category-box .fb-category-points-box [class|="fb-category-points-box"] {
   margin-bottom: 18px;
 }
